server lisen changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=demospring
 server.port = 8090
-spring.thymeleaf.prefix=classpath:/templates/
+pring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.check-template-location=true
 spring.web.resources.static-locations=classpath:/static/
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
