--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,16 @@ spring.web.resources.static-locations=classpath:/static/
 
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/bd_energia
+spring.datasource.username=root
+spring.datasource.password=
+# Driver de MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA (Hibernate)
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
